# pdfbreaker

./: README.md
pdf-struct-extractor/: README.md  pyproject.toml  requirements.txt
pdf-struct-extractor/src/pdf_struct/: __init__.py  cli.py  main.py  utils.py
pdf-struct-extractor/src/pdf_struct/parsers/: text_parser.py
pdf-struct-extractor/src/pdf_struct/readers/: pdf_reader.py
pdf-struct-extractor/src/pdf_struct/schemas/: schema.py
pdf-struct-extractor/src/pdf_struct/transformers/: struct_transformer.py
pdf-struct-extractor/tests/: test_pdf_reader.py  test_transformer.py
